Update mulig_retning.tex, forord.tex, and 3 more files...

--- a/fig/tikz/simplex/mulig_retning.tex
+++ b/fig/tikz/simplex/mulig_retning.tex
@@ -64,6 +64,11 @@
 % Punkterne 
 % -------------------------------------------------------
 \filldraw [black] (0.35,0.35,0) circle (0pt) node[above] {$\mathcal{P}$};
+\filldraw [black] (0.31,0.17,0) circle (0pt) node[anchor=south east]{$\mathbf{x}_2$};
+\filldraw [black] (e) circle (0pt) node[anchor=
+south east]{$\mathbf{x}_1$};
+\filldraw [black] (a) circle (0pt) node[anchor= north east]{$\mathbf{x}_3$};
+
 %
 %
 \end{tikzpicture}
