--- a/incl/main/indledning/forord.tex
+++ b/incl/main/indledning/forord.tex
@@ -1,26 +1,68 @@
 \chapter{Forord}
-
-Jens Koldkur,
-Jonas Bach Christensen,
-Julie Havbo Lund,
-Mads Bjerregaard Kjær,
-Mathias Gammelgaard og
-Rasmus Jespersgaard.
-	
-2. semester 
-	
-bacheloruddannelsen Matematik på Aalborg Universitet
-	
-2020
-	
-udarbejdet fra 3 februar til 27 maj 2020
-	
-kravende 
-	
-temaet 
-	
+Nærværende rapport er udarbejdet af seks 2. semester studerende på bacheloruddannelsen Matematik på Aalborg Universitet. 
+Rapporten er udarbejdet fra 3 februar til 27 maj 2020.
+% 
+Temaet for projektet er optimering, herunder mere specifikt lineære programmering.
+%
+Formålet med rapporten er at få en forståelse for optimeringsmetoder, samt at formulere os mere matematisk præcis.
+% 	
 Rapporten er nummereret i afsnit, definitioner, figurer m.m.
-Beviser afsluttes med $\square$, som indikerer, at beviset er gennemført. \\\\
+Beviser afsluttes med $\square$, der indikerer, at beviset er gennemført.
 % \square skulle have været \qed!
-
-En tak til vores vejleder Horia Cornean
+%
+Der skal lyde en tak til vores vejleder Horia Cornean, og vores bi-vejleder Maiken Winther, for at være behjælpelige gennem projektperioden.
+%
+\\\\
+\section*{Underskrifter}
+\begin{center}
+\begin{minipage}[b]{0.45\textwidth}
+\begin{center}
+\begin{tabular}{l}
+\phantom{Julieervirkeligdejligogsødogsmuk} \\
+\\
+\\
+\hline
+Jens Koldkur \\
+\\
+\\
+\\
+\\
+\hline
+Jonas Bach Christensen \\
+\\
+\\
+\\
+\\
+\hline
+Julie Havbo Lund \\         
+\end{tabular}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[b]{0.038\textwidth}
+\phantom{xD}
+\end{minipage}
+\begin{minipage}[b]{0.45\textwidth}
+\begin{center}
+\begin{tabular}{l}
+\phantom{Julieervirkeligdejligogsødogsmukogs} \\
+\\
+\\
+\hline
+Mads Bjerregaard Kjær \\
+\\
+\\
+\\
+\\
+\hline
+Mathias Gammelgaard \\
+\\
+\\
+\\
+\\
+\hline
+Rasmus Jespersgaard \\         
+\end{tabular}
+\end{center}
+\end{minipage}
+\end{center}
