--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -25,10 +25,15 @@ Dantzigs bidrag til forskningsfeltet i form af simplex-metoden er dog stadig en 
 Projektets primære arbejdsområde vil derfor omhandle simplexmetoden, samt den geometriske fremstilling af lineære programmeringsproblemer.
 Det skal dog nævnes, at der ligeledes findes optimeringsproblemer, som ikke kan beskrives igennem lineære sammenhænge. 
 Dog er indholdet af denne rapport afgrænset til at afdække løsning af lineære optimeringsproblemer.
+%
 Problemformuleringen, der ligger til grundlag for udarbejdelsen af rapporten, er: 
+%
 \begin{col}{}{}
 Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan disse løses ved hjælp af simplexmetoden?
 \end{col}
+% 
+\noindent
+%
 Nedenstående er en oversigt over indholdet af nærværende rapport. 
 \begin{itemize}[itemindent=4.6em]
 \item[\textbf{Kapitel 1:}] Er en introduktion til lineær algebra.
