--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -28,12 +28,9 @@ I følgende afsnit uddybes ovenstående punkter, samt tilhørende teori, med udg
 %
 \begin{eks}
 \label{haribooooo}
-Haribo har to typer slikblandinger $x_1$ og $x_2$, hvor profitten for disse er henholdvis $3$ og $4$ enheder(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin)
-Disse er begrænset kapiciteten af lakridsproduktion som har en begrænsning på $78$ enheder (igen ton whatever??) og vingummi som har en begrænsning på $36$ enheder, da disse indgår i begge slikblandinger.
-%igen jeg er ikke sikker på om det også fungerer aok med din udgave Julie, den har jeg bare sværere ved at forstå.
-%
-Haribo ønsker at finde det mest optimale forhold mellem de to vingummismage i $"$Vingummi hindbær og brumbær$"$-blandingen, der ses på figur \ref{mums}, med udgangspunkt i en række betingelser. 
-De ønsker at maksimere mængden af slik, begrænset af kulhydrat- og sukker-indholdet.
+Haribo har to typer slikblandinger $x_1$ og $x_2$, hvor profitten for disse er henholdsvis $3$ og $4$ enheder.
+%(her kunne der også skrives tusind/millioner whatever ingen anelse om realistisk skala i haribos profitmargin)
+Disse er begrænset af kapaciteten af lakridsproduktion, som har en begrænsning på $78$ enheder, og vingummi, der har en begrænsning på $36$ enheder, da disse indgår i begge slikblandinger.
 %
 Optimeringsproblemet er dermed følgende:
 %
@@ -42,7 +39,7 @@ Optimeringsproblemet er dermed følgende:
 \text{Maksimer}		&	\multicolumn{2}{c}{z=5x_1+4x_2}  &\\
 \text{begrænset af}	&3x_1& +5x_2			&\leq 	&78,\\
 					&4x_1& + x_2				&\leq	& 36,\\
-					&x_1& , x_2				&\geq	& 0.
+					&x_1,& x_2				&\geq	& 0.
 \end{array}
 \end{align*}
 %
