--- a/master.tex
+++ b/master.tex
@@ -73,7 +73,7 @@
 	
 % Konklusion og perspektivering 
 	\include{incl/main/konklu_perspek/konklusion}	
-	\include{incl/main/konklu_perspek/perspektivering}
+	%\include{incl/main/konklu_perspek/perspektivering}
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
