--- a/incl/main/simplex_metoden/kompleksitet.tex
+++ b/incl/main/simplex_metoden/kompleksitet.tex
@@ -19,4 +19,41 @@ Da $m \leq n$, er kompleksiteten i værste tilfælde $O(mn)$ for begge metoder.
 Med dette konkluderes det, at den reviderede metode aldrig vil køre langsommere end "fuld tabel"-metoden.
 Dog vil en iteration fra den reviderede metode være hurtigere i alle andre tilfælde end det værste.
 Endnu et vigtigt element, som er tiltalende ved den reviderede metode, er rumkompleksiteten på $O(m^2)$, hvor "fuld tabel"-metodens er på $O(mn)$.
-Her kan der igen være en ret betydelig forskel, afhængigt af størrelsen på $n$.
+Her kan der igen være en ret betydelig forskel, afhængigt af størrelsen på $n$.\\\\
+%
+Selvom antallet af basale mulige løsninger kan stige eksponentielt med antallet af variabler og betingelser, så har simplex-metoden typisk fundet en optimal løsning efter $O(m)$ iterationer.
+Dog eksisterer der polyeder, hvor antallet af pivoteringer påkrævet stiger eksponentielt.
+For ikke-degenererede problemer bevæger simplex-metoden sig altid fra et ekstremumspunkt til en af dets naboer og forbedre værdien af objektfunktionen.
+Betragt et polyeder med eksponentielt antal af ekstremumspunkter samt en sti der besøger alle ekstremumspunkter.
+Stien er lavet ved, fra et ekstremumspunkt, at besøge et ekstremumspunkt med mindre værdi.
+Med sådan et polyeder vil simplex-metoden, med en pivoteringsregl, som følger stien, kræve et eksponentielt antal af pivoteringer.
+%
+\begin{thm}{}{}
+Betragt det lineære programmeringsproblem, hvor objektfunktionen $-x_n$ minimeres med betingelserne $\epsilon \leq x_1 \leq 1$ og $\epsilon x_{i-1} \leq x_i \leq 1 - \epsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \epsilon < \frac{1}{2}$.
+Så gælder det, at:
+%
+\begin{enumerate}[label=(\alph*)]
+\item Løsningsmængden har $2^n$ ekstremumspunkt.
+\item Ekstremumspunkterne kan arrangeres således, at hver er nabo til og har lavere værdi end den forrige.
+\item Der eksisterer en pivoteringsregl til simplex-metoden således, at den kræver $2^n-1$ pivoteringer før den er færdig.
+\end{enumerate}
+%
+\end{thm}
+%
+\begin{proof}
+%
+Lad $\mathcal{P}_n$ være et polyeder i $\R^n$ begrænset af betingelserne $\epsilon \leq x_1 \leq 1$ og $\epsilon x_{i-1} \leq x_i \leq 1 - \epsilon x_{i-1}$ for $i = 2, 3, \ldots, n$ og $0 < \epsilon < \frac{1}{2}$.\\\\
+%
+Ved induktion vises det, at $\mathcal{P}_n$ har $2^n$ ekstremumspunkter og basistrinnet, hvor $n=1$ følger trivielt.
+Antag nu, at resultatet gælder for $n=k$.
+Polyedret $\mathcal{P}_{k+1}$ er begrænset af samme betingelser som $\mathcal{P}_{k}$ med tilføjelse af betingelsen $\epsilon x_{k} \leq x_{k+1} \leq 1 - \epsilon x_{k}$.
+Den øvre og nedre begrænsning i $\epsilon x_{k} \leq x_{k+1} \leq 1 - \epsilon x_{k}$ ikke kan skære hinanden mens $ 0 \leq x_k \leq 1$ er opfyldt.
+Dette medfører, at hvert ekstremumspunkt i $\mathcal{P}_{k}$ giver anledning til to entydige ekstremumspunkter i $\mathcal{P}_{k+1}$, hvilket viser (a).\\\\
+%
+Med stærk induktion vises det, at ekstremumspunkterne i  $\mathcal{P}_n$ kan arrangeres således, at hvert ekstremumspunkt er nabo til og har mindre værdi end det forrige.
+%
+\\\\
+Jævnfør \ref{3.3} (måske sæt 3.3 fra bertsimas) bevæger simplex-metoden sig altid fra nabo til nabo, når problemet ikke er degenereret.
+Med udgangspunkt i (b) vides det, at der eksistere en udspændende sti, som ender i problemets optimale løsning og $\textbf{c}^T\textbf{x}_i \leq \textbf{c}^T\textbf{x}_{i-1}$ for $i = 2, 3, \ldots ,n$.
+Dette medfører, at en pivoteringsregl, som ønsker at minimere mindst muligt pr. pivotering følger den udspændende sti og besøger alle $2^n$ ekstremumspunkter, hvilket viser (c).
+\end{proof}
