--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -85,16 +85,17 @@ fisk
 fisk
 % Sætning 3.3
 % Ikke skrevet rigtig endnu 
-\begin{thm}{}{}
-\begin{enumerate}[label = (\alph*)]
-\item fisk
-\item fisk
-\end{enumerate}
-\end{thm}
-%
-\begin{proof}
-fisk
-\end{proof}
-\\
-%
-fisk
+%\begin{thm}{}{}
+%\begin{enumerate}[label = (\alph*)]
+%\item fisk
+%\item fisk
+%\end{enumerate}
+%\end{thm}
+%%
+%\begin{proof}
+%fisk
+%\end{proof}
+%\\
+%%
+%fisk
+\input{incl/main/simplex_metoden/thm_3.3}
