Update kompleksitet.tex, pivoterings_lokke.tex, and 5 more files...

--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -1,17 +1,17 @@
-\chapter{Simplex metoden}
+\chapter{Simplexmetoden}
 \label{coronaaaaaaaaaaa}
 %
-% Introducerende simplex metoden
+% Introducerende simplexmetoden
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/simplex_metoden_intro}
 %
 %
-% Typer af simplex-metoden
+% Typer af simplexmetoden
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/undgå_pivoteringslokke}
 %
 %
-% Typer af simplex-metoden
+% Typer af simplexmetoden
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/simplex_metoden_typer}
 %
