--- a/incl/main/linear_algebra/span/under_bas_dim.tex
+++ b/incl/main/linear_algebra/span/under_bas_dim.tex
@@ -137,7 +137,6 @@ Men da søjlerne af $B$ er lineært uafhængige følger det af sætning \ref{thm
 Af samme sætning haves det så at søjlerne af $C$ er lineært uafhængige vektorer i $\R^k$.
 Da en mængde af vektorer i $\R^k$ med mere en k vektorer er lineært afhængig, haves det at $p\leq k$. 
 Vendes rollerne af baserne om, haves $k \leq p$. 
-Deraf konkluderes der a k=p, og dermed at to baser indeholder samme antal vektorer. 
-
-egenskab (2) for lineært afhængige og uafhængige mængder, se side \pageref{egenskab_lin}.
+Deraf konkluderes der at $k=p$, og dermed at to baser indeholder samme antal vektorer. 
+% egenskab (2) for lineært afhængige og uafhængige mængder, se side \pageref{egenskab_lin}.
 \end{proof}
